// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageLinkForm /> renders image link form with face detect component 1`] = `
<div>
  <div>
    <FaceCount
      numFaces={10}
    />
  </div>
  <div
    className="center"
  >
    <div
      className="br3 shadow-5 center form justify-around"
      id="input-container"
      style={
        Object {
          "padding": "1.5rem",
        }
      }
    >
      <input
        className="user-input pa2 f4 w-75-ns"
        onChange={[Function]}
        placeholder="input image URL here"
        type="text"
        value=""
      />
      <button
        className="grab-btn w-20-ns f4 grow link ph3 pv2 dib white mybg"
        onClick={[MockFunction]}
      >
        grab
      </button>
    </div>
  </div>
  <div
    className="center"
  >
    <div
      className="br3 shadow-5 center form justify-around"
      id="input-container"
      style={
        Object {
          "padding": "0.75rem",
        }
      }
    >
      <form
        id="imageForm"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <input
          accept="image/*"
          className="user-file-input pa2 f4 w-75-ns"
          id="file-upload-input"
          onChange={[Function]}
          style={
            Object {
              "overflow": "hidden",
              "width": "100%",
            }
          }
          type="file"
        />
        <button
          className="upload-btn w-20-ns f4 grow link ph3 pv2 dib white mybg"
          onClick={[Function]}
        >
          upload
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ImageLinkForm /> renders image link form without face detect component 1`] = `
<div>
  <p
    className="f4 mt3 mb3"
  >
    Grab and count the faces in your image!
  </p>
  <div
    className="center"
  >
    <div
      className="br3 shadow-5 center form justify-around"
      id="input-container"
      style={
        Object {
          "padding": "1.5rem",
        }
      }
    >
      <input
        className="user-input pa2 f4 w-75-ns"
        onChange={[Function]}
        placeholder="input image URL here"
        type="text"
        value=""
      />
      <button
        className="grab-btn w-20-ns f4 grow link ph3 pv2 dib white mybg"
        onClick={[MockFunction]}
      >
        grab
      </button>
    </div>
  </div>
  <div
    className="center"
  >
    <div
      className="br3 shadow-5 center form justify-around"
      id="input-container"
      style={
        Object {
          "padding": "0.75rem",
        }
      }
    >
      <form
        id="imageForm"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <input
          accept="image/*"
          className="user-file-input pa2 f4 w-75-ns"
          id="file-upload-input"
          onChange={[Function]}
          style={
            Object {
              "overflow": "hidden",
              "width": "100%",
            }
          }
          type="file"
        />
        <button
          className="upload-btn w-20-ns f4 grow link ph3 pv2 dib white mybg"
          onClick={[Function]}
        >
          upload
        </button>
      </form>
    </div>
  </div>
</div>
`;
